--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,8 @@ Imports:
     xml2,
     httr,
     R6,
-    plyr
+    plyr,
+    magrittr
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
